<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="default_input_hint">Mensaje</string>
    <string name="action_lightTheme">Tema claro(Selecionado)</string>
    <string name="action_darkTheme">Tema Oscuro</string>

    <!--Nombre de la aplicacion-->
    <string name="app_name">Agenda Digital</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agenda Digital</string>
    <string name="nav_header_subtitle">Aquí va el Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Afiliaciones</string>

    <!--Navigation Drawer-->
    <string name="afiliarCuenta">Administrar Cuentas</string>
    <string name="agendaDigital">Agenda Digital</string>
    <string name="kardexPago">Kardex de Pago</string>
    <string name="boletines">Boletines</string>
    <string name="practicoAlumno">Practicos Alumno</string>
    <string name="calendario">Calendario</string>
    <string name="licencias">Licencias</string>
    <string name="lista_de_alumnos">Lista de Alumnos</string>
    <string name="cambiarCuenta">Cambiar Cuenta</string>

    <!--Afiliacion-->
    <string name="formularioHabilitacion">Formulario de Habilitación</string>
    <string name="nuevo">Nuevo</string>
    <string name="tutor">Tutor</string>
    <string name="alumno">Alumno</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="habilitarme_como">Habilitarme como:</string>

    <!--Form Tutor, Afiliacion, Alumno-->
    <string name="cedulaIdentidad">Cédula de Identidad</string>
    <string name="ingreseCedula">Ingrese su número de Cédula</string>
    <string name="ingreseTelefono">Ingrese su número de teléfono</string>
    <string name="ingreseCodigo">Ingrese su Código</string>
    <string name="ingreseClave">Ingrese su clave</string>
    <string name="telefono">Teléfono</string>
    <string name="profesor" tools:ignore="Typos">Profesor</string>
    <string name="codigo">Código</string>
    <string name="clave">Clave</string>
    <string name="habilitar">Habilitar</string>
    <string name="listo">Listo</string>

    <string name="red">#FB0303</string>

    <string name="notificacion">Notificacion</string>
    <string name="colegioAizama">Agenda Digital \nAizama</string>
    <string name="user">RODRIGUEZ AIZAMA JHONNY WILSON</string>
    <string name="motivo_de_la_licencia">Motivo de la licencia</string>
    <string name="publicidad">Publicidad</string>
    <string name="horario">Horarios</string>
    <string name="listautiles">Lista de Útiles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sitio_web">Sitio Web</string>
    <string name="puntoVentas">Puntos de Ventas</string>
    <string name="paginaPrincipal">Pagina Principal</string>
    <string name="formulario_de_habilitaci_n">Formulario de Habilitación</string>
    <string name="ingrese_su_codigo">Ingrese su Código:</string>
    <string name="ingrese_su_pass">Ingrese su Clave:</string>
    <string name="password">Clave</string>
    <string name="textEstudiante">Estudiante</string>

    <string name="registroIngreso">Registro Ingreso</string>
    <string name="registroSalida">Registro Salida</string>
    <string name="textDirector">Director</string>
    <string name="PersonalAdministrativo">Personal Administrativo</string>
    <string name="RegistroUsuario">Registro Usuario</string>
    <string name="textAdministrativo">Administrativo</string>
    <string name="licenciaSolicitadas">Licencias Solicitadas</string>
    <string name="boletinNotas">Boletin de Notas</string>
    <string name="envio_de_mensajes">Envio de Mensajes</string>
    <string name="curso">Curso</string>
    <string name="paralelo">Paralelo</string>
    <string name="materia">Materia</string>
    <string name="mensaje">mensaje</string>
    <string name="lista_colegios">Lista de Colegios</string>
    <string name="nombre_del_curso">Nombre del Curso</string>
    <string name="enviar">Enviar</string>
    <string name="escribe_aqu_tu_mensaje">Escribe aquí tu mensaje...</string>
    <string name="estudiante">Estudiante</string>
    <string name="cerrar">Cerrar</string>
    <string name="lista_de_cursos">Lista de Cursos</string>
    <string name="chat">Chat</string>
    <string name="inciar_sessi_n">Inciar Sessión</string>
    <string name="c_digo">Código</string>
    <string name="docente">Docente</string>
    <string name="iniciar_sesi_n_como">Iniciar Sesión como:</string>
    <string name="administraci_n">Administración</string>
    <string name="administrador">Administrador</string>
    <string name="doc">docente</string>
    <string name="cod_doc" tools:ignore="TypographyEllipsis">Código de docente...</string>
    <string name="tut">tutor</string>
    <string name="cedula" tools:ignore="TypographyEllipsis">Cédula...</string>
    <string name="celular" tools:ignore="TypographyEllipsis">Celular...</string>
    <string name="clave_a" tools:ignore="TypographyEllipsis">Clave...</string>
    <string name="alumn">alumno</string>
    <string name="usuario" tools:ignore="TypographyEllipsis">Usuario...</string>
    <string name="adm">adm</string>
    <string name="codigo_a" tools:ignore="TypographyEllipsis">Código...</string>
    <string name="inicia_como">Iniciar sesión como: </string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="attachFile">File</string>
    <string name="attachImage">Image</string>
    <string name="attachDocument">Document</string>
    <string name="attachVideo">Video</string>
    <string name="image">Image</string>
    <string name="contact_photo">contact_photo</string>
    <string name="video_message">Video Message</string>
    <string name="restrictionsTitle"><u>Restricciones</u></string>
    <string name="groupRestrictionConfig">Conf. grupo</string>
    <string name="update_contacts">Actualizar contactos</string>
    <string name="sync_contacts_amount">Contactos sincronizados (%d)</string>

</resources>