<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editText_codigo"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:autofillHints=""
        android:hint="@string/c_digo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editText_clave"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/clave"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_codigo"
        android:autofillHints=""
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_cancelar_sesion"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_clave"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_inicio_sesion"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/inciar_sessi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_clave"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/iniciar_sesi_n_como"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_tutor"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="28dp"
        android:text="@string/tutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <Button
        android:id="@+id/button_docente"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/docente"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_tutor"/>

    <Button
        android:id="@+id/button_alumno"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/alumno"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_docente"/>

    <Button
        android:id="@+id/button_adm"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/administraci_n"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alumno"/>
</androidx.constraintlayout.widget.ConstraintLayout>