<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_background_personalizado"
    android:layout_margin="@dimen/margin_default"
    tools:context=".Fragments.FragmentFormTutor">

    <TextView
        android:id="@+id/fHTutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formularioHabilitacion"
        android:textSize="@dimen/sizeTitles"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleTutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutor"
        android:gravity="center"
        android:textSize="@dimen/sizeTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fHTutor"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:endIconMode="clear_text"
        android:hint="@string/cedulaIdentidad"
        app:helperText="@string/ingreseCedula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTutor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCedulaformtutor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:endIconMode="clear_text"
        android:hint="@string/telefono"
        app:helperText="@string/ingreseTelefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefonoformtutor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHabilitarformtutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/habilitar"
        android:padding="@dimen/paddingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputClave" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelarformtutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/cancelar"
        android:padding="@dimen/paddingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHabilitarformtutor" />

</androidx.constraintlayout.widget.ConstraintLayout>