<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_default"
    android:background="@color/color_background_personalizado"
    tools:context=".Fragments.FragmentFormProfesor">

    <TextView
        android:id="@+id/fHProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formularioHabilitacion"
        android:textSize="@dimen/sizeTitles"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title2Profesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profesor"
        android:gravity="center"
        android:textSize="@dimen/sizeTitles"
        app:layout_constraintTop_toBottomOf="@id/fHProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:endIconMode="clear_text"
        android:hint="@string/codigo"
        app:helperText="@string/ingreseCodigo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2Profesor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etcodigoformprofesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputClaveP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:endIconMode="password_toggle"
        android:hint="@string/clave"
        app:helperText="@string/ingreseClave"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputCodigo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etclaveformprofesor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHabilitarformprofesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:text="@string/habilitar"
        android:padding="@dimen/paddingButton"
        app:icon="@drawable/ic_user"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputClaveP" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelarformprofesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:padding="@dimen/paddingButton"
        app:icon="@drawable/ic_close"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHabilitarformprofesor"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>