<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_margin="@dimen/margin_default"
    tools:context=".Fragments.FragmentFormAlumno">

    <TextView
        android:id="@+id/fHAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formularioHabilitacion"
        android:textSize="@dimen/sizeTitles"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title2Alumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alumno"
        android:gravity="center"
        android:textSize="@dimen/sizeTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fHAlumno"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputUsuarioA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:endIconMode="clear_text"
        android:hint="@string/codigo"
        app:helperText="@string/ingreseCodigo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2Alumno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etcodigoformalumno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imputClaveA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:endIconMode="password_toggle"
        android:hint="@string/clave"
        app:helperText="@string/ingreseCodigo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputUsuarioA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etclaveformalumno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnHabilitarformalumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:text="@string/habilitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imputClaveA" />

    <Button
        android:id="@+id/btnCancelarformalumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginTop="@dimen/margin_max"
        app:layout_constraintTop_toBottomOf="@id/imputClaveA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnHabilitarformalumno"/>

</androidx.constraintlayout.widget.ConstraintLayout>