<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    tools:context=".Fragments.FragmentAfiliacion">

    <TextView
        android:id="@+id/textCambiarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/RegistroUsuario"
        android:textSize="@dimen/sizeTitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textCambiarCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/lvAfiliados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/separator1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nuevo"
        android:padding="@dimen/paddingButton"
        app:icon="@drawable/ic_add"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        app:layout_constraintBottom_toTopOf="@id/btnEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        android:padding="@dimen/paddingButton"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@id/btnDeleteUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingButton"
        android:text="@string/eliminar"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        app:icon="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnListoafiliacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/listo"
        android:visibility="gone"
        android:padding="@dimen/paddingButton"
        android:backgroundTint="@color/colorButtons"
        android:textColor="@color/text_color_buttons"
        app:iconTint="@color/icon_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>